# preseq

./: .clang-format  .cppcheck_suppress  .gitignore  .gitmodules  .readthedocs.yaml  CPPLINT.cfg  Makefile  Makefile.am  NBD_mixture.cpp  NBD_mixture.hpp  Poiss_mixture.cpp  Poiss_mixture.hpp  README.md  README.txt  ZTNB.cpp  ZTNB.hpp  autogen.sh  bam2mr.cpp  c_curve.cpp  combine_mixture.cpp  complexity_plot.cpp  compute_variance_sum_ztp.cpp  configure.ac  continued_fraction.cpp  continued_fraction.hpp  count_c_curve.cpp  count_extrap.cpp  coverage.cpp  distinct.cpp  em.cpp  em.hpp  etcomplexity.cpp  extrapolate_library_complexity_mixture_not_given.cpp  fit_trunc_negbin.cpp  gaussian_quadrature.cpp  gaussian_quadrature.hpp  gc_extrap.cpp  gsl_pade.cpp  gsl_pade.hpp  lc_extrap.cpp  (+34 more)
.github/workflows/: clang-format.yml  cppcheck.yml  cpplint.yml  ubuntu-builds.yml
data/: SRR1003759_5M_hist.txt  SRR1106616_5M_subset.bam  SRR1301329_1M_hist.txt  Shakespeare_hist.txt  additional_data.txt
docs/: RELEASE_NOTES.txt  biblio.bib  manual.tex
documentation/: README.md  mkdocs.yml
documentation/docs/: index.md  quickstart.md  requirements.txt
m4/: ax_cxx_compile_stdcxx_17.m4
samtools/: bgzf.c
smithlab_cpp/: FileIterator.cpp  FileIterator.hpp  GenomicRegion.cpp  GenomicRegion.hpp  Makefile  MappedRead.cpp  MappedRead.hpp  OptionParser.cpp  OptionParser.hpp  QualityScore.cpp  QualityScore.hpp  RNG.cpp  RNG.hpp  SAM.cpp  SAM.hpp  bisulfite_utils.cpp  bisulfite_utils.hpp  sim_utils.cpp  sim_utils.hpp  smithlab_os.cpp  smithlab_os.hpp  smithlab_utils.cpp  smithlab_utils.hpp
src/: Makefile  bam_record_utils.cpp  bam_record_utils.hpp  bound_pop.cpp  bound_pop.hpp  c_curve.cpp  c_curve.hpp  common.cpp  common.hpp  complexity_plot  complexity_plot.cpp  continued_fraction.cpp  continued_fraction.hpp  dnmt_error.hpp  gc_extrap.cpp  gc_extrap.hpp  lc_extrap.cpp  lc_extrap.hpp  library_complexity  library_size_estimates.cpp  load_data_for_complexity.cpp  load_data_for_complexity.hpp  moment_sequence.cpp  moment_sequence.hpp  pade_approximant.hpp  pop_size.cpp  pop_size.hpp  preseq.cpp  to-mr.cpp
tests/: md5sum.txt
tests/data/: gc_extrap_input.mr  lc_extrap_input.vals
tests/scripts/: test_c_curve.test  test_gc_extrap.test  test_lc_extrap.test
